--- a/libApp/libApp/client/main.css
+++ b/libApp/libApp/client/main.css
@@ -1,1 +1,86 @@
 /* CSS declarations go here */
+body {
+    /*background-color: lightblue;*/
+}
+h1 {
+    /*color: white;*/
+    color: black;
+    text-align: center;
+}
+p {
+    font-family: verdana;
+    font-size: 10px;
+}
+table, th, td {border: 1px solid black;}
+th, td {
+	padding: 5px;
+	border-bottom: 1px solid #ddd;
+}
+table {
+    width: 100%;
+}
+th {
+    background-color: #4CAF50;
+    color: white;
+    /*height: 50px;*/
+}
+tr:hover {background-color: #f5f5f5}
+tr:nth-child(even) {background-color: #f2f2f2}
+#menu{z-index: 11000;}
+#id {
+	text-align: center;
+}
+#searchValue {
+	text-align: center;
+}
+#search {
+	align-self: center;
+}
+input[name=simpleSearch] {
+	width: 330px;
+	box-sizing: border-box;
+	border: 2px solid #ccc;
+	border-radius: 4px;
+	font-size: 16px;
+	background-color: white;
+	background-image: url('searchicon.png');
+	background-position: 10px 10px;
+	background-repeat: no-repeat;
+	padding: 12px 20px 12px 40px;
+	-webkit-transition: width 0.4s ease-in-out;
+	transition: width 0.4s ease-in-out;
+}
+input[name=simpleSearch]:focus {
+	width: 100%;
+}
+.center {
+	display: block;
+	text-align: center;
+	margin: auto;
+	width: 60%;
+}
+.centerFooter {
+    margin: auto;
+    width: 60%;
+    border: 3px solid #73AD21;
+    padding: 10px;
+    text-align: center;
+}
+.button {
+	box-sizing: border-box;
+	background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 10px 22px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    margin: auto;
+}
+#toggleAdvSrch {
+	width: 60%;
+	text-align: center;
+	display: block;
+	margin: auto;
+}
